<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/newsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/title" />

        <TextView
            android:id="@+id/newsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingTop="4dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/readMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:paddingTop="4dp" />
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/chocolate"
            android:padding="4dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
